fix widget spacing/fp hero desktop+ spacing

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -722,7 +722,7 @@ h4 {
       line-height: 1.3; } }
 
 .c-hero--fh__body__subtitle {
-  margin: 0;
+  margin: 0 auto;
   font-size: 22px;
   font-size: 1.375em;
   line-height: 1.3;
@@ -1133,15 +1133,35 @@ h4 {
           flex: 1.5;
   margin-top: 2.5rem;
   padding-top: 2.5rem;
-  border-top: 1px solid #BFBFBF; }
+  border-top: 1px solid #BFBFBF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
   @media (min-width: 1024px) {
     .c-sidebar {
       border: none;
       margin: 0;
-      padding: 0; } }
+      padding-top: 0;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
 
 .widget {
   padding-left: 2.5rem; }
+  @media (min-width: 1024px) {
+    .widget {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      padding: 0;
+      margin: 0 auto;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
 .widget-title {
   margin: 0; }
