--- a/scss/components/_components.hero--fh.scss
+++ b/scss/components/_components.hero--fh.scss
@@ -43,7 +43,7 @@
         }
 
         .c-hero--fh__body__subtitle {
-            margin: 0;
+            margin: 0 auto;
             @include font-size(22px, 1.3);
             @include font-family(regular);
 
